--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,59 @@
-opencv-python==4.2.0.34
-numpy>=1.16.0
-pillow==6.2.0
-scipy==1.1.0
-wget==3.2
-seaborn==0.9.0
+absl-py==0.9.0
+appdirs==1.4.4
+astor==0.8.1
+cachetools==4.1.0
+certifi==2020.4.5.2
+chardet==3.0.4
+click==7.1.2
+cycler==0.10.0
+distlib==0.3.0
 easydict==1.9
-grpcio>=1.24.3
+filelock==3.0.12
+Flask==1.1.2
+Flask-SocketIO==4.3.0
+gast==0.2.2
+google-auth==1.18.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.29.0
+h5py==2.10.0
+idna==2.9
+importlib-metadata==1.6.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.2.2
+numpy==1.18.5
+oauthlib==3.1.0
+opencv-python==4.2.0.34
+opt-einsum==3.2.1
+pandas==1.0.5
+Pillow==6.2.0
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-engineio==3.13.0
+python-socketio==4.6.0
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scipy==1.1.0
+seaborn==0.9.0
+six==1.12.0
+tensorboard==2.0.2
 tensorflow==2.0.0
+tensorflow-estimator==2.0.1
+termcolor==1.1.0
+urllib3==1.25.9
+virtualenv==20.0.23
+Werkzeug==1.0.1
+wget==3.2
+wrapt==1.12.1
+zipp==3.1.0
